Add vitest and its configurations to tests and update project data

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,15 +14,15 @@
     "skipLibCheck": true,
     "strict": true,
     "strictNullChecks": true,
-    "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
+    "forceConsistentCasingInFileNames": false,
     "paths": {
       "@/*": ["./src/*"]
     },
     "types": [
-      //"vitest/globals"
-    ]
+      "vitest/globals"
+    ],
   }
 }
