--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "administrative_system_base",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "Base para sistemas administrativos desenvolvida com NestJS, seguindo boas práticas de arquitetura e modularidade.",
+  "author": "Gabriel F. S. Santos <gabriel.fssantos@email.com>",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
+  "type": "module",
   "scripts": {
     "build": "nest build",
     "format": "eslint --fix \"{src,apps,libs,test}/**/*.ts\"",
@@ -12,7 +13,11 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:cov": "vitest run --coverage",
+    "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
+    "test:e2e": "vitest run --config ./vitest.config.e2e.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -33,6 +38,8 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.4",
     "@types/supertest": "^6.0.2",
+    "@vitest/coverage-v8": "^3.0.6",
+    "esbuild": "^0.25.0",
     "eslint": "^9.18.0",
     "globals": "^15.14.0",
     "source-map-support": "^0.5.21",
@@ -40,6 +47,9 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "^8.20.0",
+    "unplugin-swc": "^1.5.1",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.6"
   }
 }
