--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.25.1",
+    "@faker-js/faker": "^9.7.0",
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
     "@nestjs/testing": "^11.1.0",
@@ -40,6 +41,7 @@
     "@vitest/coverage-v8": "^3.1.2",
     "esbuild": "^0.25.3",
     "eslint": "^9.25.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.1.0",
