--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "esbuild": "^0.25.3",
     "eslint": "^9.25.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^16.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.1.0",
