--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/core": "^11.1.0",
     "@nestjs/platform-express": "^11.1.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "zod": "^3.25.46",
+    "zod-validation-error": "^3.4.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
